Start work with API

--- a/src/Applications/BusInfo.Web/Views/Auth/SignIn.cshtml
+++ b/src/Applications/BusInfo.Web/Views/Auth/SignIn.cshtml
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5">
-    <meta name="author" content="AdminKit">
-    <meta name="keywords" content="adminkit, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
+    <meta name="author" content="BusInfo">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="shortcut icon" href="img/icons/icon-48x48.png"/>
+    <link rel="shortcut icon" href="~/img/icons/icon-48x48.png"/>
 
     <link rel="canonical" href="https://demo-basic.adminkit.io/pages-sign-in.html"/>
 
-    <title>Sign In | AdminKit Demo</title>
+    <title>Даромад | BusInfo</title>
 
-    <link href="css/app.css" rel="stylesheet">
+    <link href="~/css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -28,47 +27,42 @@
                 <div class="d-table-cell align-middle">
 
                     <div class="text-center mt-4">
-                        <h1 class="h2">Welcome back!</h1>
+                        <h1 class="h2">Хуш омадед!</h1>
                         <p class="lead">
-                            Sign in to your account to continue
+                            Барои давом додан ворид шавед
                         </p>
                     </div>
 
                     <div class="card">
                         <div class="card-body">
                             <div class="m-sm-3">
-                                <form>
+                                <form method="post" asp-action="SignIn" asp-route-returnurl="@ViewData["ReturnUrl"]">
                                     <div class="mb-3">
-                                        <label class="form-label">Email</label>
-                                        <input class="form-control form-control-lg" type="email" name="email" placeholder="Enter your email"/>
+                                        <label class="form-label">Логин</label>
+                                        <input class="form-control form-control-lg" type="text" name="userName" placeholder="Логини худро дароред"/>
                                     </div>
                                     <div class="mb-3">
-                                        <label class="form-label">Password</label>
-                                        <input class="form-control form-control-lg" type="password" name="password" placeholder="Enter your password"/>
+                                        <label class="form-label">Рамзи махфӣ</label>
+                                        <input class="form-control form-control-lg" type="password" name="password" placeholder="Рамзи махфиро дароред"/>
                                     </div>
                                     <div>
-                                        <div class="form-check align-items-center">
-                                            <input id="customControlInline" type="checkbox" class="form-check-input" value="remember-me" name="remember-me" checked>
-                                            <label class="form-check-label text-small" for="customControlInline">Remember me</label>
-                                        </div>
+                                   
                                     </div>
                                     <div class="d-grid gap-2 mt-3">
-                                        <a href="index.html" class="btn btn-lg btn-primary">Sign in</a>
+                                        <input type="submit" class="btn btn-lg btn-primary" value="Даромад">
                                     </div>
                                 </form>
                             </div>
                         </div>
                     </div>
-                    <div class="text-center mb-3">
-                        Don't have an account? <a href="pages-sign-up.html">Sign up</a>
-                    </div>
+                 
                 </div>
             </div>
         </div>
     </div>
 </main>
 
-<script src="js/app.js"></script>
+<script src="~/js/app.js"></script>
 
 </body>
 
